seaqt/QtCore/gen_qvariant.nim

proc fcQSequentialIterableconst_iterator_operatorPlusAssign(self: pointer, j: cint): pointer {.importc: "QSequentialIterable__const_iterator_operatorPlusAssign".}
proc fcQSequentialIterableconst_iterator_operatorMinusAssign(self: pointer, j: cint): pointer {.importc: "QSequentialIterable__const_iterator_operatorMinusAssign".}
proc fcQSequentialIterableconst_iterator_operatorPlus(self: pointer, j: cint): pointer {.importc: "QSequentialIterable__const_iterator_operatorPlus".}
proc fcQSequentialIterableconst_iterator_operatorMinus(self: pointer, j: cint): pointer {.importc: "QSequentialIterable__const_iterator_operatorMinus".}
proc fcQSequentialIterableconst_iterator_new(other: pointer): ptr cQSequentialIterableconst_iterator {.importc: "QSequentialIterable__const_iterator_new".}
proc fcQAssociativeIterableconst_iterator_operatorAssign(self: pointer, other: pointer): void {.importc: "QAssociativeIterable__const_iterator_operatorAssign".}
proc fcQAssociativeIterableconst_iterator_key(self: pointer): pointer {.importc: "QAssociativeIterable__const_iterator_key".}
proc fcQAssociativeIterableconst_iterator_value(self: pointer): pointer {.importc: "QAssociativeIterable__const_iterator_value".}
proc fcQAssociativeIterableconst_iterator_operatorMultiply(self: pointer): pointer {.importc: "QAssociativeIterable__const_iterator_operatorMultiply".}
proc fcQAssociativeIterableconst_iterator_operatorEqual(self: pointer, o: pointer): bool {.importc: "QAssociativeIterable__const_iterator_operatorEqual".}
proc fcQAssociativeIterableconst_iterator_operatorNotEqual(self: pointer, o: pointer): bool {.importc: "QAssociativeIterable__const_iterator_operatorNotEqual".}
proc fcQAssociativeIterableconst_iterator_operatorPlusPlus(self: pointer): pointer {.importc: "QAssociativeIterable__const_iterator_operatorPlusPlus".}
proc fcQAssociativeIterableconst_iterator_operatorPlusPlusWithInt(self: pointer, param1: cint): pointer {.importc: "QAssociativeIterable__const_iterator_operatorPlusPlusWithInt".}
proc fcQAssociativeIterableconst_iterator_operatorMinusMinus(self: pointer): pointer {.importc: "QAssociativeIterable__const_iterator_operatorMinusMinus".}
proc fcQAssociativeIterableconst_iterator_operatorMinusMinusWithInt(self: pointer, param1: cint): pointer {.importc: "QAssociativeIterable__const_iterator_operatorMinusMinusWithInt".}
proc fcQAssociativeIterableconst_iterator_operatorPlusAssign(self: pointer, j: cint): pointer {.importc: "QAssociativeIterable__const_iterator_operatorPlusAssign".}
proc fcQAssociativeIterableconst_iterator_operatorMinusAssign(self: pointer, j: cint): pointer {.importc: "QAssociativeIterable__const_iterator_operatorMinusAssign".}
proc fcQAssociativeIterableconst_iterator_operatorPlus(self: pointer, j: cint): pointer {.importc: "QAssociativeIterable__const_iterator_operatorPlus".}
proc fcQAssociativeIterableconst_iterator_operatorMinus(self: pointer, j: cint): pointer {.importc: "QAssociativeIterable__const_iterator_operatorMinus".}
proc fcQAssociativeIterableconst_iterator_new(other: pointer): ptr cQAssociativeIterableconst_iterator {.importc: "QAssociativeIterable__const_iterator_new".}

proc operatorAssign*(self: gen_qvariant_types.QVariant, other: gen_qvariant_types.QVariant): void =
  fcQVariant_operatorAssign(self.h, other.h)

proc swap*(self: gen_qvariant_types.QVariant, other: gen_qvariant_types.QVariant): void =
  fcQVariant_swap(self.h, other.h)

proc typeX*(self: gen_qvariant_types.QVariant): cint =
  cint(fcQVariant_typeX(self.h))

proc userType*(self: gen_qvariant_types.QVariant): cint =
  fcQVariant_userType(self.h)

proc typeName*(self: gen_qvariant_types.QVariant): cstring =
  (fcQVariant_typeName(self.h))

proc canConvert*(self: gen_qvariant_types.QVariant, targetTypeId: cint): bool =
  fcQVariant_canConvert(self.h, targetTypeId)

proc convert*(self: gen_qvariant_types.QVariant, targetTypeId: cint): bool =
  fcQVariant_convert(self.h, targetTypeId)

proc isValid*(self: gen_qvariant_types.QVariant): bool =
  fcQVariant_isValid(self.h)

proc isNull*(self: gen_qvariant_types.QVariant): bool =
  fcQVariant_isNull(self.h)

proc clear*(self: gen_qvariant_types.QVariant): void =
  fcQVariant_clear(self.h)

proc detach*(self: gen_qvariant_types.QVariant): void =
  fcQVariant_detach(self.h)

proc isDetached*(self: gen_qvariant_types.QVariant): bool =
  fcQVariant_isDetached(self.h)

proc toInt*(self: gen_qvariant_types.QVariant): cint =
  fcQVariant_toInt(self.h)

proc toUInt*(self: gen_qvariant_types.QVariant): cuint =
  fcQVariant_toUInt(self.h)

proc toLongLong*(self: gen_qvariant_types.QVariant): clonglong =
  fcQVariant_toLongLong(self.h)

proc toULongLong*(self: gen_qvariant_types.QVariant): culonglong =
  fcQVariant_toULongLong(self.h)

proc toBool*(self: gen_qvariant_types.QVariant): bool =
  fcQVariant_toBool(self.h)

proc toDouble*(self: gen_qvariant_types.QVariant): float64 =
  fcQVariant_toDouble(self.h)

proc toFloat*(self: gen_qvariant_types.QVariant): float32 =
  fcQVariant_toFloat(self.h)

proc toReal*(self: gen_qvariant_types.QVariant): float64 =
  fcQVariant_toReal(self.h)

proc toByteArray*(self: gen_qvariant_types.QVariant): seq[byte] =
  var v_bytearray = fcQVariant_toByteArray(self.h)
  var vx_ret = @(toOpenArray(cast[ptr UncheckedArray[byte]](v_bytearray.data), 0, int(v_bytearray.len)-1))
  c_free(v_bytearray.data)
  vx_ret

proc toBitArray*(self: gen_qvariant_types.QVariant): gen_qbitarray_types.QBitArray =
  gen_qbitarray_types.QBitArray(h: fcQVariant_toBitArray(self.h), owned: true)

proc toString*(self: gen_qvariant_types.QVariant): string =
  let v_ms = fcQVariant_toString(self.h)
  let vx_ret = string.fromBytes(v_ms)
  c_free(v_ms.data)
  vx_ret

proc toStringList*(self: gen_qvariant_types.QVariant): seq[string] =
  var v_ma = fcQVariant_toStringList(self.h)
  var vx_ret = newSeq[string](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[struct_miqt_string]](v_ma.data)
  for i in 0 ..< v_ma.len:
    let vx_lv_ms = v_outCast[i]
    let vx_lvx_ret = string.fromBytes(vx_lv_ms)
    c_free(vx_lv_ms.data)
    vx_ret[i] = vx_lvx_ret
  c_free(v_ma.data)
  vx_ret

proc toChar*(self: gen_qvariant_types.QVariant): gen_qchar_types.QChar =
  gen_qchar_types.QChar(h: fcQVariant_toChar(self.h), owned: true)

proc toDate*(self: gen_qvariant_types.QVariant): gen_qdatetime_types.QDate =
  gen_qdatetime_types.QDate(h: fcQVariant_toDate(self.h), owned: true)

proc toTime*(self: gen_qvariant_types.QVariant): gen_qdatetime_types.QTime =
  gen_qdatetime_types.QTime(h: fcQVariant_toTime(self.h), owned: true)

proc toDateTime*(self: gen_qvariant_types.QVariant): gen_qdatetime_types.QDateTime =
  gen_qdatetime_types.QDateTime(h: fcQVariant_toDateTime(self.h), owned: true)

proc toMap*(self: gen_qvariant_types.QVariant): Table[string,gen_qvariant_types.QVariant] =
  var v_mm = fcQVariant_toMap(self.h)
  var vx_ret: Table[string, gen_qvariant_types.QVariant]
  var v_Keys = cast[ptr UncheckedArray[struct_miqt_string]](v_mm.keys)
  var v_Values = cast[ptr UncheckedArray[pointer]](v_mm.values)
  for i in 0..<v_mm.len:
    let vx_mapkey_ms = v_Keys[i]
    let vx_mapkeyx_ret = string.fromBytes(vx_mapkey_ms)
    c_free(vx_mapkey_ms.data)
    var v_entry_Key = vx_mapkeyx_ret

    var v_entry_Value = gen_qvariant_types.QVariant(h: v_Values[i], owned: true)

    vx_ret[v_entry_Key] = v_entry_Value
  c_free(v_mm.keys)
  c_free(v_mm.values)
  vx_ret

proc toHash*(self: gen_qvariant_types.QVariant): Table[string,gen_qvariant_types.QVariant] =
  var v_mm = fcQVariant_toHash(self.h)
  var vx_ret: Table[string, gen_qvariant_types.QVariant]
  var v_Keys = cast[ptr UncheckedArray[struct_miqt_string]](v_mm.keys)
  var v_Values = cast[ptr UncheckedArray[pointer]](v_mm.values)
  for i in 0..<v_mm.len:
    let vx_hashkey_ms = v_Keys[i]
    let vx_hashkeyx_ret = string.fromBytes(vx_hashkey_ms)
    c_free(vx_hashkey_ms.data)
    var v_entry_Key = vx_hashkeyx_ret

    var v_entry_Value = gen_qvariant_types.QVariant(h: v_Values[i], owned: true)

    vx_ret[v_entry_Key] = v_entry_Value
  c_free(v_mm.keys)
  c_free(v_mm.values)
  vx_ret

proc toPoint*(self: gen_qvariant_types.QVariant): gen_qpoint_types.QPoint =
  gen_qpoint_types.QPoint(h: fcQVariant_toPoint(self.h), owned: true)

proc toPointF*(self: gen_qvariant_types.QVariant): gen_qpoint_types.QPointF =
  gen_qpoint_types.QPointF(h: fcQVariant_toPointF(self.h), owned: true)

proc toRect*(self: gen_qvariant_types.QVariant): gen_qrect_types.QRect =
  gen_qrect_types.QRect(h: fcQVariant_toRect(self.h), owned: true)

proc toSize*(self: gen_qvariant_types.QVariant): gen_qsize_types.QSize =
  gen_qsize_types.QSize(h: fcQVariant_toSize(self.h), owned: true)

proc toSizeF*(self: gen_qvariant_types.QVariant): gen_qsize_types.QSizeF =
  gen_qsize_types.QSizeF(h: fcQVariant_toSizeF(self.h), owned: true)

proc toLine*(self: gen_qvariant_types.QVariant): gen_qline_types.QLine =
  gen_qline_types.QLine(h: fcQVariant_toLine(self.h), owned: true)

proc toLineF*(self: gen_qvariant_types.QVariant): gen_qline_types.QLineF =
  gen_qline_types.QLineF(h: fcQVariant_toLineF(self.h), owned: true)

proc toRectF*(self: gen_qvariant_types.QVariant): gen_qrect_types.QRectF =
  gen_qrect_types.QRectF(h: fcQVariant_toRectF(self.h), owned: true)

proc toLocale*(self: gen_qvariant_types.QVariant): gen_qlocale_types.QLocale =
  gen_qlocale_types.QLocale(h: fcQVariant_toLocale(self.h), owned: true)

proc toRegExp*(self: gen_qvariant_types.QVariant): gen_qregexp_types.QRegExp =
  gen_qregexp_types.QRegExp(h: fcQVariant_toRegExp(self.h), owned: true)

proc toRegularExpression*(self: gen_qvariant_types.QVariant): gen_qregularexpression_types.QRegularExpression =
  gen_qregularexpression_types.QRegularExpression(h: fcQVariant_toRegularExpression(self.h), owned: true)

proc toEasingCurve*(self: gen_qvariant_types.QVariant): gen_qeasingcurve_types.QEasingCurve =
  gen_qeasingcurve_types.QEasingCurve(h: fcQVariant_toEasingCurve(self.h), owned: true)

proc toUuid*(self: gen_qvariant_types.QVariant): gen_quuid_types.QUuid =
  gen_quuid_types.QUuid(h: fcQVariant_toUuid(self.h), owned: true)

proc toUrl*(self: gen_qvariant_types.QVariant): gen_qurl_types.QUrl =
  gen_qurl_types.QUrl(h: fcQVariant_toUrl(self.h), owned: true)

proc toJsonValue*(self: gen_qvariant_types.QVariant): gen_qjsonvalue_types.QJsonValue =
  gen_qjsonvalue_types.QJsonValue(h: fcQVariant_toJsonValue(self.h), owned: true)

proc toJsonObject*(self: gen_qvariant_types.QVariant): gen_qjsonobject_types.QJsonObject =
  gen_qjsonobject_types.QJsonObject(h: fcQVariant_toJsonObject(self.h), owned: true)

proc toJsonArray*(self: gen_qvariant_types.QVariant): gen_qjsonarray_types.QJsonArray =
  gen_qjsonarray_types.QJsonArray(h: fcQVariant_toJsonArray(self.h), owned: true)

proc toJsonDocument*(self: gen_qvariant_types.QVariant): gen_qjsondocument_types.QJsonDocument =
  gen_qjsondocument_types.QJsonDocument(h: fcQVariant_toJsonDocument(self.h), owned: true)

proc toModelIndex*(self: gen_qvariant_types.QVariant): gen_qabstractitemmodel_types.QModelIndex =
  gen_qabstractitemmodel_types.QModelIndex(h: fcQVariant_toModelIndex(self.h), owned: true)

proc toPersistentModelIndex*(self: gen_qvariant_types.QVariant): gen_qabstractitemmodel_types.QPersistentModelIndex =
  gen_qabstractitemmodel_types.QPersistentModelIndex(h: fcQVariant_toPersistentModelIndex(self.h), owned: true)

proc load*(self: gen_qvariant_types.QVariant, ds: gen_qdatastream_types.QDataStream): void =
  fcQVariant_load(self.h, ds.h)

proc save*(self: gen_qvariant_types.QVariant, ds: gen_qdatastream_types.QDataStream): void =
  fcQVariant_save(self.h, ds.h)

proc typeToName*(_: type gen_qvariant_types.QVariant, typeId: cint): cstring =
  (fcQVariant_typeToName(typeId))

proc nameToType*(_: type gen_qvariant_types.QVariant, name: cstring): cint =
  cint(fcQVariant_nameToType(name))

proc data*(self: gen_qvariant_types.QVariant): pointer =
  fcQVariant_data(self.h)
